# pipecat-backend

./: .env.example  README.md  app.py  bot.py  livekit_auth.py  main.py  pyproject.toml  session_manager.py  token_api.py
root/: .env.example
server/: bot.py
